--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/compiler": "8.2.8",
     "@angular/compiler-cli": "8.2.8",
     "@angular/core": "8.2.8",
+    "@angular/animations": "8.2.8",
     "@angular/forms": "8.2.8",
     "@angular/language-service": "8.2.8",
     "@angular/platform-browser": "8.2.8",
@@ -50,6 +51,7 @@
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.2",
     "mocha": "6.2.0",
+    "ng-zorro-antd": "^8.4.1",
     "npm-run-all": "4.1.5",
     "rxjs": "6.5.3",
     "spectron": "8.0.0",
